@@ -22,3 +22,4 @@ README.pod
 t/ipc_srlock*
 *.tar.gz
 HTML-StateTable-*
+lib/HTML/StateTable/ResultSet
